--- a/AngularJS_JSON/index.html
+++ b/AngularJS_JSON/index.html
@@ -24,6 +24,7 @@
 
         <thead>
             <tr>
+                <th>Index</th>
                 <th><a href="" ng-click="sortField='Category'; reverse=!reverse">Category </a> </th>
                 <th><a href="" ng-click="sortField='Book'; reverse=!reverse">Book</a></th>
                 <th><a href="" ng-click="sortField='Publishers'; reverse=!reverse">Publishers</a></th>
@@ -40,11 +41,12 @@
             </tr>
 
             <tr ng-repeat="item in products | filter:query | orderBy:sortField:reverse">
+                <td>{{$index+1}}</td>
                 <td>{{item.Category}}</td>
                 <td>{{item.Book}}</td>
                 <td>{{item.Publishers}}</td>
                 <td>{{item.Price | currency}}</td>
-                <td>{{item.Copies_Sold}}</td>
+                <td>{{item.Copies_Sold | number}}</td>
                 <td><img ng-src="{{item.coverURL}}" width="100"></td>
             </tr>
 
@@ -55,7 +57,6 @@
     <p>
         <button class="btn btn-primary" ng-click="loadDataPromise()">Load Data With Promise</button>
     </p>
-
 
 </body>
 
